[package]
name = "coding-test"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"


[dependencies]
thiserror = "2.0.12"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
